--- a/profile.njk
+++ b/profile.njk
@@ -6,6 +6,7 @@
 body {
 	background-image: url(/assets/img/sativa.png);
 }
+
 .container {
   width: 100%;
   margin: auto;
@@ -54,7 +55,19 @@ body {
   font-size: 28px;
   font-weight: bold;
 }
+@media screen and (min-width: 300px) and (max-width: 600px) {
 
+  body h1 {
+    color: green;
+  }
+  .footer {
+    background-color: salmon;
+  }
+  .header a:hover {
+  background-color: lightskyblue;
+  color: black;
+   }
+}
 
 </style>
 <body>
